forth/test/fail/test_local_name_leading_dot.af
\ Must fail to compile.
fun: .test_local_name_leading_dot { .val -- err }
end
